--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,50 @@ body {
     align-items: center;
     font-family: Roboto,"Helvetica Neue", sans-serif;
 }
+
+
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: rgb(173, 163, 163);
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+  }
+  
+  .content {
+    margin: 20px;
+
+    .details {
+        text-align: center;
+        div>div {
+          padding-top: 20px;
+        }
+    }
+  }
+
+table {
+    width: 100%;
+  
+    td {
+        max-width: 200px;
+    }
+    .mat-row:hover {
+        background-color: rgba(76, 175, 79, 0.425);
+      }
+  }
